--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.3.4",
-    "winston": "^3.7.2"
+    "swagger-ui-express": "^4.4.0",
+    "winston": "^3.7.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.35",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/winston": "^2.4.4",
+    "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.0",
