--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.35",
     "@types/swagger-ui-express": "^4.1.3",
@@ -32,6 +33,7 @@
     "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
